--- a/tawafeeq/src/pricing.html
+++ b/tawafeeq/src/pricing.html
@@ -943,7 +943,6 @@
         </div>
         <main>
             <div id="root">
-
                 <main>
                     <div class="row">
                         <div class="col-2"></div>
@@ -1011,6 +1010,12 @@
                                                                     100 درهم
                                                                 </h4>
                                                             </div>
+                                                            <div class="d-flex flex-column align-items-center ">
+                                                                <p class="fw-light line_height" style="text-align: center;">
+                                                                    <span class="margin d-block">وفر 33%</span><br> توثيق الحساب<br> إمكانية التواصل مع المشتركين<br> إمكانية توكيل خطاب/ة<br>
+
+                                                                </p>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                     <div class="card-footer pt-0 border-0">
@@ -1035,6 +1040,11 @@
                                                                     100 درهم
                                                                 </h4>
                                                             </div>
+                                                            <div class="d-flex flex-column align-items-center ">
+                                                                <p class="fw-light line_height" style="text-align: center;">
+                                                                    <span class=" d-block">وفر 50%<br></span> توثيق الحساب<br> إمكانية التواصل مع المشتركين<br> إمكانية توكيل 3 خطابات<br>
+                                                                </p>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                     <div class="card-footer pt-0 border-0">
@@ -1047,11 +1057,11 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12">
-                                                <div class="card h-100 hover-scale-up">
+                                            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 ">
+                                                <div class="card h-100 hover-scale-up hover">
                                                     <div class="card-body pb-0">
                                                         <div class="d-flex flex-column align-items-center ">
-                                                            <div class="display-4">سنة</div>
+                                                            <div class="display-4">شهر</div>
                                                         </div>
                                                         <div class="d-flex flex-column align-items-center ">
                                                             <div class="display-4">
@@ -1059,21 +1069,19 @@
                                                                     500 درهم
                                                                 </h4>
                                                             </div>
-                                                            <div>
-                                                                وفر 58%
+                                                            <div class="d-flex flex-column align-items-center ">
+                                                                <p class="fw-light line_height" style="text-align: center;">
+                                                                    <span class="margin d-block">وفر 58%<br></span>
+                                                                    <br> توثيق الحساب
+                                                                    <br> إمكانية التواصل مع المشتركين
+                                                                    <br> إمكانية توكيل 5 خطابات
+                                                                    <br> إمكانية توكيل إدارة الموقع </p>
                                                             </div>
-                                                            <p class="line_height fw-light" style="text-align: center;">
-                                                                <br> توثيق الحساب
-                                                                <br> إمكانية التواصل مع المشتركين
-                                                                <br> إمكانية توكيل 5 خطابات
-                                                                <br> إمكانية توكيل إدارة الموقع
-
-                                                            </p>
                                                         </div>
                                                     </div>
                                                     <div class="card-footer pt-0 border-0">
                                                         <div class="d-flex justify-content-center">
-                                                            <a href="#" class="btn btn-icon btn-icon-start btn-foreground hover-outline stretched-link">
+                                                            <a href="#" class=" btn btn-icon btn-icon-start btn-foreground hover-outline stretched-link">
                                                                 <i data-acorn-icon="chevron-right"></i>
                                                                 <span>Purchase</span>
                                                             </a>
@@ -1085,7 +1093,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                         <div class="col-2"></div>
                     </div>
