--- a/tawafeeq/src/pricing.html
+++ b/tawafeeq/src/pricing.html
@@ -306,8 +306,8 @@
             <div id="root">
                 <main>
                     <div class="row">
-                        <div class="col-2"></div>
-                        <div class="col-8">
+                        <div class="col-sm-0 col-md-2"></div>
+                        <div class="col-sm-12 col-md-8">
                             <div class="container">
                                 <div class="page-title-container">
                                     <div id="accordionCards">
@@ -452,7 +452,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-2"></div>
+                        <div class="col-sm-0 col-md-2"></div>
                     </div>
                 </main>
 
