--- a/tawafeeq/src/pricing.html
+++ b/tawafeeq/src/pricing.html
@@ -250,29 +250,28 @@
                             </a>
                         </li>
                         <li>
-                            <a href="file:///var/www/php74.local/tawfeeq_frontend/tawafeeq/src/about.html">
+                            <a href="about.html">
                                 <span class="label">من نحن</span>
                             </a>
-
                         </li>
                         <li>
-                            <a href="file:///var/www/php74.local/tawfeeq_frontend/tawafeeq/src/pricing.html">
+                            <a href="pricing.html">
                                 <span class="label">الباقات</span>
                             </a>
 
                         </li>
                         <li class="mega">
-                            <a href="file:///var/www/php74.local/tawfeeq_frontend/tawafeeq/src/contact.html">
+                            <a href="contact.html">
                                 <span class="label">تواصل معنا</span>
                             </a>
                         </li>
                         <li class="mega">
-                            <a href="file:///var/www/php74.local/tawfeeq_frontend/tawafeeq/src/login_page.html">
+                            <a href="login_page.html">
                                 <span class="label">تسجيل الدخول                                </span>
                             </a>
                         </li>
                         <li class="mega">
-                            <a href="file:///var/www/php74.local/tawfeeq_frontend/tawafeeq/src/register.html">
+                            <a href="register.html">
                                 <span class="label"> تسجيل</span>
                             </a>
                         </li>
