--- a/tawafeeq.html
+++ b/tawafeeq.html
@@ -428,7 +428,7 @@
                                     <div class="glide__slides">
                                       <div class="glide__slide">
                                         <div class="card mb-5">
-                                          <img src="img/product/small/product-3.webp" class="card-img-top" alt="card image" />
+                                          <img src="homepage_img/man.png" class="card-img-top" alt="card image" />
                                           <div class="card-body">
                                             <h5 class="card-title">Card title 1</h5>
                                             <p class="card-text">Liquorice caramels apple pie chupa.</p>
@@ -437,7 +437,7 @@
                                       </div>
                                       <div class="glide__slide">
                                         <div class="card mb-5">
-                                          <img src="img/product/small/product-3.webp" class="card-img-top" alt="card image" />
+                                          <img src="homepage_img/woman.png" class="card-img-top" alt="card image" />
                                           <div class="card-body">
                                             <h5 class="card-title">Card title 2</h5>
                                             <p class="card-text">Liquorice caramels apple pie chupa.</p>
@@ -446,8 +446,8 @@
                                       </div>
                                       <div class="glide__slide">
                                         <div class="card mb-5">
-                                          <img src="img/product/small/product-3.webp" class="card-img-top" alt="card image" />
-                                          <div class="card-body">
+                                            <img src="homepage_img/man.png" class="card-img-top" alt="card image" />
+                                            <div class="card-body">
                                             <h5 class="card-title">Card title 3</h5>
                                             <p class="card-text">Liquorice caramels apple pie chupa.</p>
                                           </div>
@@ -455,8 +455,8 @@
                                       </div>
                                       <div class="glide__slide">
                                         <div class="card mb-5">
-                                          <img src="img/product/small/product-3.webp" class="card-img-top" alt="card image" />
-                                          <div class="card-body">
+                                            <img src="homepage_img/woman.png" class="card-img-top" alt="card image" />
+                                            <div class="card-body">
                                             <h5 class="card-title">Card title 4</h5>
                                             <p class="card-text">Liquorice caramels apple pie chupa.</p>
                                           </div>
@@ -464,8 +464,8 @@
                                       </div>
                                       <div class="glide__slide">
                                         <div class="card mb-5">
-                                          <img src="img/product/small/product-3.webp" class="card-img-top" alt="card image" />
-                                          <div class="card-body">
+                                            <img src="homepage_img/man.png" class="card-img-top" alt="card image" />
+                                            <div class="card-body">
                                             <h5 class="card-title">Card title 5</h5>
                                             <p class="card-text">Liquorice caramels apple pie chupa.</p>
                                           </div>
@@ -473,8 +473,8 @@
                                       </div>
                                       <div class="glide__slide">
                                         <div class="card mb-5">
-                                          <img src="img/product/small/product-3.webp" class="card-img-top" alt="card image" />
-                                          <div class="card-body">
+                                            <img src="homepage_img/woman.png" class="card-img-top" alt="card image" />
+                                            <div class="card-body">
                                             <h5 class="card-title">Card title 6</h5>
                                             <p class="card-text">Liquorice caramels apple pie chupa.</p>
                                           </div>
@@ -482,8 +482,8 @@
                                       </div>
                                       <div class="glide__slide">
                                         <div class="card mb-5">
-                                          <img src="img/product/small/product-3.webp" class="card-img-top" alt="card image" />
-                                          <div class="card-body">
+                                            <img src="homepage_img/man.png" class="card-img-top" alt="card image" />
+                                            <div class="card-body">
                                             <h5 class="card-title">Card title 7</h5>
                                             <p class="card-text">Liquorice caramels apple pie chupa.</p>
                                           </div>
