tawfeeq profile page and header

--- a/login_page.html
+++ b/login_page.html
@@ -274,6 +274,11 @@
                                 <span class="label"> تسجيل</span>
                             </a>
                         </li>
+                        <li class="mega">
+                            <a href="profile.html">
+                                <span class="label"> After Login</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <!-- Menu End -->
