--- a/tawafeeq.html
+++ b/tawafeeq.html
@@ -350,6 +350,11 @@
                                 <span class="label"> تسجيل</span>
                             </a>
                         </li>
+                        <li class="mega">
+                            <a href="profile.html">
+                                <span class="label"> After Login</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <!-- Menu End -->
@@ -603,7 +608,7 @@
                     </div>
                 </div>
                 <h2 class="" dir="rtl"><span class="fw-bold fs-4">الأعضاء المتواجدون حاليًا</span>(عرض الكل)</h2>
-                <div class="row justify-content-center ">
+                <div class="row justify-content-center">
                     <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 width_silder">
                         <div class="card mb-5" dir="rtl">
                             <img src="homepage_img/woman.png" class="card-img-top" alt="card image" />
