--- a/login_page.html
+++ b/login_page.html
@@ -244,7 +244,7 @@
                 <div class="menu-container flex-grow-1">
                     <ul id="menu" class="menu">
                         <li class="">
-                            <a href="#">
+                            <a href="tawafeeq.html">
                                 <span>الصفحة الرئيسية</span>
                             </a>
                         </li>
