--- a/about.html
+++ b/about.html
@@ -276,15 +276,13 @@
                             </a>
                         </li>
                         <li class="mega">
-                            <a href="profile.html">
+                            <a href="profile_new.html">
                                 <span class="label"> After Login</span>
                             </a>
                         </li>
 
                     </ul>
                 </div>
-                <!-- Menu End -->
-
                 <!-- Mobile Buttons Start -->
                 <div class="mobile-buttons-container">
                     <!-- Scrollspy Mobile Button Start -->
