--- a/contact.html
+++ b/contact.html
@@ -276,7 +276,7 @@
                             </a>
                         </li>
                         <li class="mega">
-                            <a href="profile.html">
+                            <a href="profile_new.html">
                                 <span class="label"> After Login</span>
                             </a>
                         </li>
