--- a/login_page.html
+++ b/login_page.html
@@ -275,7 +275,7 @@
                             </a>
                         </li>
                         <li class="mega">
-                            <a href="profile.html">
+                            <a href="profile_new.html">
                                 <span class="label"> After Login</span>
                             </a>
                         </li>
