--- a/tawafeeq.html
+++ b/tawafeeq.html
@@ -351,7 +351,7 @@
                             </a>
                         </li>
                         <li class="mega">
-                            <a href="profile.html">
+                            <a href="profile_new.html">
                                 <span class="label"> After Login</span>
                             </a>
                         </li>
