--- a/tawafeeq.html
+++ b/tawafeeq.html
@@ -54,9 +54,15 @@
     <script src="js/base/loader.js"></script>
 
 
-
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600&display=swap" rel="stylesheet" /> -->
     <style>
+        * {
+            font-family: 'Tajawal', sans-serif !important;
+        }
+        
         input[type="radio"]:checked+label {
             color: white;
         }
